<resources>
    <string name="app_name">Dashboard</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_monitor">Monitoring Dashboard</string>
    <string name="nav_incident">Incident Dashboard</string>
    <string name="nav_sign_out">Signout</string>

    <string name="tv_refresh">Refresh</string>
    <string name="tv_user_name">user name</string>
    <string name="tv_password">password</string>
    <string name="btn_login">Login</string>
    <string name="tv_zero">0</string>
    <string name="tv_name">Hi Suresh!</string>
    <string name="tv_failed_bid">Failed Bids</string>
    <string name="tv_incomplete_bid">Incomplete Bids</string>
    <string name="tv_user_id">User Id</string>
    <string name="tv_listing_id">Listing Id</string>
    <string name="tv_created_on">Created On</string>
    <string name="tv_component_name">Component Name</string>


    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Monitoring Dashboard</item>
        <item>Incident Dashboard</item>
        <item>Sign Out</item>
    </string-array>

    <string name="msg_loading">Loading&#8230;</string>
    <string name="success">SUCCESS</string>
    <string name="failed">FAILED</string>
    <string name="more">MORE</string>
    <string name="user_id">User ID:</string>
    <string name="listing_id">Listing ID:</string>
    <string name="created_on">Created On</string>
    <string name="component_name">Component Name</string>
    <string name="step_name">Step Name</string>
    <string name="error_reason">Error Reason</string>
    <string name="stack_trace">Stack Trace</string>
    <string name="failure_info_title">Description</string>
    <string name="msg_no_failed_bigs">No Failed Bids</string>
</resources>
