<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/cardIncidentDetail">

    <RelativeLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:clickable="true"
        android:background="?android:attr/selectableItemBackground"
        android:orientation="vertical">

        <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvListingId"
            android:layout_alignBaseline="@+id/startTime"
            android:layout_alignBottom="@+id/startTime"
            android:layout_alignStart="@+id/tvUserId" />

        <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/status"
            android:layout_alignStart="@+id/tvListingId"
            android:id="@+id/tvCreatedOn" />

        <TextView
            android:text="@string/tv_listing_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:textStyle="bold"
            android:id="@+id/startTime"
            android:layout_below="@+id/startId"
            android:layout_alignParentStart="true" />

        <TextView
            android:text="@string/tv_created_on"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:id="@+id/status"
            android:layout_below="@+id/startTime"
            android:layout_alignStart="@+id/startTime" />

        <TextView
            android:text="@string/tv_component_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:id="@+id/assignedTo"
            android:layout_below="@+id/status"
            android:layout_alignStart="@+id/status" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@mipmap/ic_launcher"
            android:id="@+id/imageView2"
            android:layout_below="@+id/tvUserId"
            android:layout_alignParentEnd="true" />

        <TextView
            android:text="@string/tv_user_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:id="@+id/startId"
            android:layout_alignStart="@+id/startTime"
            android:layout_alignParentTop="true" />

        <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvComponentName"
            android:layout_below="@+id/tvCreatedOn"
            android:layout_alignStart="@+id/tvCreatedOn" />

        <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:id="@+id/tvUserId"
            android:layout_toEndOf="@+id/assignedTo"
            android:layout_alignParentTop="true" />
    </RelativeLayout>

</android.support.v7.widget.CardView>