<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_failure_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.altisource.hubzu.dashboard.ui.FailureInfoActivity">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/step_name"
            android:textStyle="bold"
            android:textSize="15sp"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"/>
        <TextView
            android:id="@+id/stage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:paddingLeft="25dp"
            android:layout_marginBottom="30dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error_reason"
            android:textStyle="bold"
            android:textSize="15sp"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"/>
        <TextView
            android:id="@+id/error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:paddingLeft="25dp"
            android:layout_marginBottom="30dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stack_trace"
            android:textStyle="bold"
            android:textSize="15sp"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"/>
        <TextView
            android:id="@+id/stack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:paddingLeft="25dp"
            android:layout_marginBottom="30dp"/>
    </LinearLayout>
</ScrollView>
