<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.altisource.hubzu.dashboard.ui.IncidentProcessDetailFragment">
    <android.support.design.widget.TabLayout
        android:id="@+id/tabs"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:tabMode="fixed"
        app:tabGravity="fill"
        android:background="@color/cardview_light_background"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <android.support.design.widget.TabItem
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="process details"/>

        <android.support.design.widget.TabItem
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="user activities"/>
    </android.support.design.widget.TabLayout>

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">
        <TextView
            android:id="@+id/user_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_id"
            android:textStyle="bold"
            android:textSize="8sp"/>
        <TextView
            android:id="@+id/user_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/user_id"
            android:textSize="8sp"/>
        <TextView
            android:id="@+id/listing_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:layout_toRightOf="@id/user_tv"
            android:text="@string/listing_id"
            android:textStyle="bold"
            android:textSize="8sp"/>
        <TextView
            android:id="@+id/listing_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/listing_id"
            android:textSize="8sp"/>
        <TextView
            android:id="@+id/created_on"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/created_on"
            android:textStyle="bold"
            android:layout_below="@id/user_id"
            android:layout_alignLeft="@id/user_id"
            android:textSize="8sp"/>
        <TextView
            android:id="@+id/created_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/created_on"
            android:layout_below="@id/user_tv"
            android:textSize="8sp"/>
        <TextView
            android:id="@+id/component_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/component_name"
            android:textStyle="bold"
            android:layout_toRightOf="@id/created_tv"
            android:layout_alignLeft="@id/listing_id"
            android:layout_below="@id/listing_id"
            android:textSize="8sp"/>
        <TextView
            android:id="@+id/component_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/component_name"
            android:layout_below="@id/listing_tv"
            android:textSize="8sp"/>
    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>
