<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.altisource.hubzu.dashboard.fragment.MonitorFragment">

    <LinearLayout
        android:id="@+id/content_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:background="@drawable/bg_border"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tvIncidentFail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/tv_zero"
                    android:textSize="22sp"
                    android:background="@drawable/ic_circle"
                    android:textColor="@color/colorRed" />

                <TextView
                    android:text="@string/tv_failed_bid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:id="@+id/tvFailedBid" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:background="@drawable/bg_border"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tvIncidentIncomplete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="22sp"
                    android:text="@string/tv_zero"
                    android:background="@drawable/ic_circle"
                    android:textColor="@color/colorOrange" />

                <TextView
                    android:text="@string/tv_incomplete_bid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:id="@+id/tvIncompleteBid" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

        </LinearLayout>
    </LinearLayout>


</FrameLayout>
